--- a/ui/public/global.css
+++ b/ui/public/global.css
@@ -1,70 +1,22 @@
-html,
-body {
-  position: relative;
-  width: 100%;
-  height: 100%;
+app h1 {
+  margin-top: 1em;
+  margin-bottom: 0;
 }
 
-body {
-  color: #333;
-  margin: 0;
-  padding: 8px;
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+app h2 {
+  margin-top: .5em;
+  margin-bottom: .3em;
 }
 
-a {
-  color: rgb(0, 100, 200);
-  text-decoration: none;
+app .card .card-body h3.card-title {
+  margin-bottom: 0;
 }
 
-a:hover {
-  text-decoration: underline;
+main {
+  margin: 0 auto;
 }
 
-a:visited {
-  color: rgb(0, 80, 160);
-}
-
-label {
-  display: block;
-}
-
-input,
-button,
-select,
-textarea {
-  font-family: inherit;
-  font-size: inherit;
-  padding: 0.4em;
-  margin: 0 0 0.5em 0;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 2px;
-}
-
-input:disabled {
-  color: #ccc;
-}
-
-input[type="range"] {
-  height: 0;
-}
-
-button {
-  color: #333;
-  background-color: #f4f4f4;
-  outline: none;
-}
-
-button:disabled {
-  color: #999;
-}
-
-button:not(:disabled):active {
-  background-color: #ddd;
-}
-
-button:focus {
-  border-color: #666;
+li span.align {
+    display: inline-block;
+    margin: .5rem;
 }
