Don't use Google Fonts

--- a/ui/public/global.css
+++ b/ui/public/global.css
@@ -20,3 +20,28 @@ li span.align {
     display: inline-block;
     margin: .5rem;
 }
+
+nav .nav-brand h3 a {
+  border: none;
+}
+
+nav .nav-brand h3 a:hover {
+  color: #868e96;
+}
+
+@font-face {
+  font-family: 'Neucha';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Neucha'),
+       url('fonts/neucha-v11-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/neucha-v11-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+@font-face {
+  font-family: 'Patrick Hand SC';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Patrick Hand SC'), local('PatrickHandSC-Regular'),
+       url('fonts/patrick-hand-sc-v7-latin_latin-ext-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/patrick-hand-sc-v7-latin_latin-ext-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
