--- a/ui/public/darkmode.css
+++ b/ui/public/darkmode.css
@@ -1,8 +1,8 @@
 :root {
   --main-bright-color: #b8b8b8;
   --main-dark-color:  #111316;
-  --soft-shadow-color: rgba(255, 255, 255, 0.2);
-  --hard-shadow-color: rgba(255, 255, 255, 0.3);
+  --soft-shadow-color: rgba(128, 202, 96, 0.3); /*  rgba(255, 255, 255, 0.2); */
+  --hard-shadow-color: rgba(122, 166, 103, 0.4); /*  rgba(255, 255, 255, 0.3); */
 }
 
 input, select, textarea {
@@ -48,29 +48,33 @@ a a:visited {
   transition: all 235ms ease 0s;
 }
 .shadow.shadow-large {
-  box-shadow: 20px 38px 34px -26px var(--soft-shadow-color)
+  box-shadow: 20px 38px 34px -26px var(--soft-shadow-color);
 }
 .shadow.shadow-small {
-  box-shadow: 10px 19px 17px -13px var(--soft-shadow-color)
+  box-shadow: 10px 19px 17px -13px var(--soft-shadow-color);
 }
 .shadow.shadow-hover:hover {
-  box-shadow: 2px 8px 8px -5px var(--hard-shadow-color)
+  /* box-shadow: 2px 8px 8px -5px var(--hard-shadow-color); */
+  box-shadow: 0px 0px 5px 5px var(--hard-shadow-color);
+}
 }
 .child-shadows > * {
-  box-shadow: 15px 28px 25px -18px var(--soft-shadow-color)
+  box-shadow: 15px 28px 25px -18px var(--soft-shadow-color);
 }
 .child-shadows-hover > * {
-  box-shadow: 15px 28px 25px -18px var(--soft-shadow-color)
+  /* box-shadow: 15px 28px 25px -18px var(--soft-shadow-color); */
+  box-shadow: 0px 0px 5px 5px var(--hard-shadow-color);
 }
 .child-shadows-hover > :hover {
-  box-shadow: 2px 8px 8px -5px var(--hard-shadow-color)
+  /* box-shadow: 2px 8px 8px -5px var(--hard-shadow-color); */
+  box-shadow: 0px 0px 5px 5px var(--hard-shadow-color);
 }
 .paper-btn,
 [type=button],
 button {
   box-shadow: 15px 28px 25px -18px var(--soft-shadow-color);
   background: 0 0;
-  border: 2px solid #41403e;
+  border: 2px solid #3f3e3c;
   color: var(--main-bright-color);
 }
 .paper-btn.btn-large,
@@ -86,22 +90,26 @@ button.btn-small {
 .paper-btn:hover,
 [type=button]:hover,
 button:hover {
-  box-shadow: 2px 8px 8px -5px var(--hard-shadow-color)
+  /* box-shadow: 2px 8px 8px -5px var(--hard-shadow-color); */
+  box-shadow: 0px 0px 5px 5px var(--hard-shadow-color);
 }
 .paper-btn:focus,
 [type=button]:focus,
 button:focus {
   border: 2px solid #0071de;
-  box-shadow: 2px 8px 4px -6px var(--hard-shadow-color)
+  /* box-shadow: 2px 8px 4px -6px var(--hard-shadow-color); */
+  box-shadow: 0px 0px 5px 5px var(--hard-shadow-color);
 }
 .card {
   box-shadow: 15px 28px 25px -18px var(--soft-shadow-color);
   border: 2px solid var(--main-bright-color);
 }
 .card:hover {
-  box-shadow: 2px 8px 8px -5px var(--hard-shadow-color)
+  /* box-shadow: 2px 8px 8px -5px var(--hard-shadow-color); */
+  box-shadow: 0px 0px 5px 5px var(--hard-shadow-color);
 }
 .progress {
   border: 2px solid #41403e;
-  box-shadow: 2px 8px 8px -5px var(--hard-shadow-color);
+  /* box-shadow: 2px 8px 8px -5px var(--hard-shadow-color); */
+  box-shadow: 0px 0px 5px 5px var(--hard-shadow-color);
 }
